README explanations changed

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This piece of software consists of two part, one the server and the other the client. There can be a couple of clients running and seding transaction requests to the server. Transactions have to do with updating four repositories with new values. There is a chance that a part of a transaction request is missed. Thus, the server is capable of noticing it, and then asking the client to resend the missed parts. When the whole transaction is received on the server, it runs it using a concurrency control algorithm called "Two Phase Locking". Considering that the server may receive transaction request messages at the same time, and thus try to run them in paralel, the concurrency control algorithm ensures accurate values in the repositories.
+This piece of software consists of two parts, one the server and the other the client. There can be a couple of clients running and seding transaction requests to the server. Transactions have to do with updating four repositories on the server with new values. There is a chance that a part of a transaction request is missed. Thus, the server is capable of noticing it, and then asking the client to resend the missed parts. When the whole transaction is received on the server, it runs it using a concurrency control algorithm called "Two Phase Locking". Considering that the server may receive transaction request messages at the same time, and thus try to run them in parallel, the concurrency control algorithm ensures that there will be no Race Condition and values in repositories will be accurate.
